[tool.poetry]
name = "nine-nine-message-bot"
version = "0.1.0"
description = ""
authors = ["riguima <richard.alexsander.guima@gmail.com>"]
readme = "README.md"
packages = [{include = "nine_nine_message_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.10.0"
webdriver-manager = "^3.8.6"
pandas = "^2.0.3"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
ruff = "^0.0.277"
python-lsp-server = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
